# LeVLJEPA

./: README.md  pyproject.toml  train_levljepa.py  train_levljepa_plus.py
configs/: levljepa.yaml  levljepa_plus.yaml
configs/model/: base.yaml  small.yaml  tiny.yaml
utils/: dataset.py  eval_utils.py  sigreg.py
