[project]
name = "levljepa"
version = "0.1.0"
description = "LeVLJEPA: Language-enhanced Vision-Language JEPA"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch",
    "torchvision",
    "timm",
    "transformers",
    "datasets>=2.14.0",
    "einops",
    "hydra-core",
    "omegaconf",
    "numpy",
    "tqdm",
    "wandb",
    "huggingface_hub>=1.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
